Fixed the layout bug on the logotext in the header

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -752,3 +752,7 @@ body > .govuk-header + .govuk-width-container {
 .govuk-header__logotype {
     width:150% !important;
 }
+
+.govuk-header__logo{
+    width:50% !important;
+}
